Move gc triggers to enum.